test : 중복 적용된 코드 삭제, 당첨 번호 입력 테스트 추가 1. 다른 테스트 코드에 중복 적용된 코드 삭제 2. 정상적인 문자열의 경우 테스트 3. 문자열에 숫자와 쉼표를 제외한 다른 문자가 있을 경우 테스트 4. 쉼표 구분이 적절하게 이뤄지지 않은 경우 테스트 5. 문자열이 비어있는 경우 테스트 6. 당첨 번호가 1 ~ 45 사이가 아닐 경우 테스트